--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - TZ=${TZ}
       - MYSQL_PORT=${DB_PORT}
       - CHOKIDAR_USEPOLLING=true
+      - REDIS_URL=${REDIS_URL}
     tty: true
     ports:
       - '3000:3000'
@@ -47,7 +48,16 @@ services:
     command: bash -c "npm install && npm run dev"
     depends_on:
       - nest
-  
+  redis:
+    image: redis:7.4.1
+    ports:
+      - '6379:6379'
+    volumes:
+      - ./redis/data:/data
+      - ./redis/redis.conf:/usr/local/etc/redis/redis.conf
+    command: redis-server /usr/local/etc/redis/redis.conf
+    networks:
+      - backend
 networks:
   backend:
 
