--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,14 +38,12 @@ services:
       - backend
     depends_on:
       - db    
-  react:
-    image: node:20-buster
+  frontend:
+    image: nginx:1.25.2
     ports:
-      - '5173:5173'
+      - '5173:80'
     volumes:
-      - ./react:/app
-    working_dir: /app
-    command: bash -c "npm install && npm run dev"
+      - ./frontend:/usr/share/nginx/html
     depends_on:
       - nest
   redis:
